--- a/02.spring-batch-practice/batch/src/main/resources/application.yml
+++ b/02.spring-batch-practice/batch/src/main/resources/application.yml
@@ -2,6 +2,13 @@ spring:
   profiles:
     active: local
 
+  batch:
+    job:
+      names: ${job.name:NONE}
+
+logging.level.org.springframework.batch: DEBUG
+
+
 ---
 spring:
   profiles: local
